# arkon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.cargo/: config.toml
crates/arkon-adapters/: Cargo.toml
crates/arkon-adapters/src/: fingerprint.rs  lib.rs  registry.rs  runner.rs
crates/arkon-adapters/src/adapters/: android.rs  docker.rs  go.rs  ios.rs  nextjs.rs  nodejs.rs  python.rs  rust_bin.rs  shell.rs  static.rs  unity.rs  vite.rs
crates/arkon-cli/: Cargo.toml  build.rs
crates/arkon-cli/src/: json_output.rs  main.rs  print.rs
crates/arkon-cli/src/commands/: mod.rs  mod_impl.rs  ship.rs
crates/arkon-core/: Cargo.toml
crates/arkon-core/src/: artifact.rs  config.rs  deploy.rs  error.rs  lib.rs  runtime.rs  snapshot.rs
crates/arkon-daemon/: Cargo.toml
crates/arkon-daemon/src/: acme.rs  audit.rs  health.rs  lib.rs  pruner.rs  watcher.rs
crates/arkon-detector/: Cargo.toml
crates/arkon-detector/src/: lib.rs  rules.rs  scanner.rs
crates/arkon-gui/: index.html  package.json
crates/arkon-gui/src/: App.tsx  invoke.ts  styles.css
crates/arkon-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/arkon-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
crates/arkon-gui/src/pages/: Cost.tsx  Dashboard.tsx  Deploy.tsx  Doctor.tsx  History.tsx  Secrets.tsx  Targets.tsx
crates/arkon-p2p/: Cargo.toml
crates/arkon-p2p/src/: identity.rs  lib.rs  preview.rs  relay.rs  server.rs
crates/arkon-p2p/src/dht/: mod.rs  node.rs  provider.rs
crates/arkon-p2p/src/matchmaking/: internet.rs  lan.rs  mod.rs
crates/arkon-secrets/: Cargo.toml
crates/arkon-secrets/src/: keychain.rs  lib.rs  mnemonic.rs  vault.rs
crates/arkon-store/: Cargo.toml
crates/arkon-store/src/: index.rs  lib.rs  store.rs
crates/arkon-targets/: Cargo.toml
crates/arkon-targets/src/: dispatcher.rs  lib.rs
crates/arkon-targets/src/targets/: docker.rs  github_pages.rs  ipfs.rs  local.rs  s3.rs  ssh.rs  torrent.rs  webrtc.rs
crates/arkon-tests/: Cargo.toml
crates/arkon-tests/src/: lib.rs
crates/arkon-tests/tests/: integration.rs
docs/: index.html  security.md
relay/: README.md  go.mod  main.go
