[package]
name    = "arkon-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core    = { path = "../arkon-core" }
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
walkdir.workspace    = true
sha2.workspace       = true
hex.workspace        = true
tracing.workspace    = true
tokio.workspace      = true
tempfile.workspace   = true
toml.workspace       = true
dirs.workspace       = true
