[package]
name    = "arkon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "arkon"
path = "src/main.rs"

[dependencies]
arkon-core      = { path = "../arkon-core" }
arkon-detector  = { path = "../arkon-detector" }
arkon-adapters  = { path = "../arkon-adapters" }
arkon-targets   = { path = "../arkon-targets" }
arkon-secrets   = { path = "../arkon-secrets" }
arkon-store     = { path = "../arkon-store" }
arkon-p2p       = { path = "../arkon-p2p" }
arkon-daemon    = { path = "../arkon-daemon" }
anyhow.workspace     = true
clap.workspace       = true
tokio.workspace      = true
tracing.workspace    = true
tracing-subscriber.workspace = true
colored.workspace    = true
console.workspace    = true
indicatif.workspace  = true
dialoguer.workspace  = true
chrono.workspace     = true
serde_json.workspace = true
serde.workspace      = true
dirs.workspace       = true
toml.workspace       = true
url.workspace        = true
sha2.workspace       = true
hex.workspace        = true
git2.workspace       = true
