[package]
name    = "arkon-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace    = true
thiserror.workspace = true
serde.workspace     = true
serde_json.workspace = true
chrono.workspace    = true
uuid.workspace      = true
sha2.workspace      = true
hex.workspace       = true
tracing.workspace   = true
zeroize.workspace   = true
toml.workspace      = true
