[package]
name    = "arkon-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core     = { path = "../arkon-core" }
arkon-targets  = { path = "../arkon-targets" }
arkon-adapters = { path = "../arkon-adapters" }
arkon-store    = { path = "../arkon-store" }
anyhow.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
chrono.workspace             = true
dirs.workspace               = true
reqwest.workspace            = true
walkdir.workspace            = true
sha2.workspace               = true
hex.workspace                = true
notify.workspace             = true
instant-acme.workspace       = true
x509-parser.workspace        = true
rcgen                        = "0.12"
pem.workspace                = true
