[package]
name    = "arkon-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core      = { path = "../arkon-core" }
anyhow.workspace      = true
thiserror.workspace   = true
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
tokio-util.workspace  = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
base64.workspace      = true
url.workspace         = true
reqwest.workspace     = true
sha2.workspace        = true
hex.workspace         = true
rand.workspace        = true
ed25519-dalek.workspace = true
httpdate.workspace = true
libp2p.workspace          = true
mdns-sd.workspace         = true
dirs.workspace    = true
hostname       = "0.3"
futures        = "0.3"

# HTTP server for the local relay landing page
# (lightweight — no full framework needed)
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
