[package]
name    = "arkon-secrets"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core       = { path = "../arkon-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace  = true
serde_json.workspace = true
aes-gcm.workspace = true
argon2.workspace  = true
rand.workspace    = true
zeroize.workspace = true
dirs.workspace    = true
hex.workspace     = true
tracing.workspace = true
sha2.workspace    = true
keyring.workspace = true
bip39.workspace   = true
base64ct.workspace = true
dialoguer.workspace = true
