[package]
name    = "arkon-store"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core      = { path = "../arkon-core" }
anyhow.workspace      = true
thiserror.workspace   = true
serde.workspace       = true
serde_json.workspace  = true
chrono.workspace      = true
uuid.workspace        = true
dirs.workspace        = true
tracing.workspace     = true
sha2.workspace        = true
hex.workspace         = true
