[package]
name    = "arkon-targets"
version.workspace = true
edition.workspace = true

[dependencies]
arkon-core     = { path = "../arkon-core" }
arkon-adapters = { path = "../arkon-adapters" }
arkon-p2p      = { path = "../arkon-p2p" }
anyhow.workspace      = true
thiserror.workspace   = true
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
tracing.workspace     = true
sha2.workspace        = true
hex.workspace         = true
chrono.workspace      = true
uuid.workspace        = true
dirs.workspace        = true
tempfile.workspace    = true
walkdir.workspace     = true
bytes.workspace       = true
futures-util          = "0.3"
tar                   = "0.4"
reqwest               = { version = "0.11", features = ["multipart", "blocking", "json", "rustls-tls"] }

# SSH
ssh2.workspace = true

# S3 / object storage
aws-sdk-s3.workspace           = true
aws-config.workspace           = true
aws-sigv4.workspace            = true
aws-credential-types.workspace = true
aws-types                      = "1"

# Docker
bollard.workspace     = true

# Torrent
lava_torrent.workspace = true

# Download page template
minijinja.workspace    = true
